@@ -4,6 +4,8 @@ TSDuck Change Log and Release Notes
 
 Version 3.12-756
 
+- Added plugin "merge" which merges two transport streams.
+
 - Added option --realtime to "tsp". This option selects appropriate default
   options when operating on real-time streamings. The "default defaults" remain
   appropriate for offline processing, such as working on transport streams files.
@@ -22,7 +24,7 @@ Version 3.12-756
   event was marked as immediate.
 
 - Bug fix: In "tsemmg", the TCP disconnection of the MUX was not detected in a
-  timely fashion when data is injected using UDP.
+  timely fashion when data was injected using UDP.
 
 - Bug fix: In "tsemmg", sending UDP data to a broadcast address was not allowed.
   Now it is possible to send data to a local broadcast address. Using routed
